# codeforces-rust-template

./: .gitignore  Cargo.toml  DOCS.md  README.md  TODO.txt  expand.rs  restart.sh  setup.sh  start.sh  train.sh  watch.sh
doc/: algorithms.typ  math.typ
extensions/firefox-copy-cf-tests/: firefox-copy-cf-tests.js  firefox-copy-codeforces-tests.js  manifest.json
src/: a1.rs  b1.rs  b2.rs  c1.rs  d1.rs  e2.rs  extensions.rs  f1.rs  h2.rs  template.old.rs  template.rs  tester.rs  watcher.rs  z2.rs
src/extensions/: algorithm_dijkstra.rs  collection_bit_vec.rs  collection_nd_array.rs  io_ch.rs  io_chs.rs  io_dec.rs  io_partial_word.rs  io_word_ch.rs  io_word_chs.rs  iter_min_max.rs  iter_prods.rs  iter_sums.rs  math_binomial.rs  math_combinations.rs  math_factorials.rs  math_log10.rs  math_log2.rs  math_permutations.rs  math_subsequences.rs  mod.rs  modular.rs  prime_factorize.rs  rooted_tree.rs  rooted_tree_with_binary_lifting.rs  solve_ax_cong_b_mod_p.rs  solve_ax_plus_by_eq_gcd_ab.rs  util_each.rs  util_each_combination.rs  util_each_permutation.rs  util_into_range.rs  util_lazy_fmt.rs  util_option_min_max.rs  util_shuffle.rs  util_slice_from_iterator.rs  util_solve_ax_cong_b_mod_p.rs
src/lib-tests/: io.rs  ops.rs
src/tasks/: c1.rs  f2.rs  g1.rs
src/tests/: channel_io.rs  examples.rs  interactive.rs  mod.rs  trim_lines.rs  util.rs
src/tests/libtests/: extensions.rs  io.rs  mod.rs  template.rs
src/tests/libtests/extensions/: algorithm_dijkstra.rs  collection_bit_vec.rs  collection_nd_array.rs  io_ch.rs  io_chs.rs  io_dec.rs  io_partial_word.rs  io_word_ch.rs  io_word_chs.rs  iter_min_max.rs  iter_prods.rs  iter_sums.rs  math_binomial.rs  math_combinations.rs  math_factorials.rs  math_log10.rs  math_log2.rs  math_permutations.rs  math_subsequences.rs  mod.rs  modular.rs  prime_factorize.rs  rooted_tree.rs  rooted_tree_with_binary_lifting.rs  solve_ax_cong_b_mod_p.rs  solve_ax_plus_by_eq_gcd_ab.rs  util_each.rs  util_each_combination.rs  util_each_permutation.rs  util_into_range.rs  util_option_min_max.rs  util_slice_from_iterator.rs  util_solve_ax_cong_b_mod_p.rs
src/tests/libtests/template/: io.rs  mod.rs  ops.rs
template/: Cargo.toml
template/src/: main.rs  problem.rs  tests.rs
