[package]
name = "template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "template"
path = "src/template.rs"

[[bin]]
name = "a1"
path = "src/a1.rs"

[[bin]]
name = "a2"
path = "src/a2.rs"

[[bin]]
name = "b1"
path = "src/b1.rs"

[[bin]]
name = "b2"
path = "src/b2.rs"

[[bin]]
name = "c1"
path = "src/c1.rs"

[[bin]]
name = "c2"
path = "src/c2.rs"

[[bin]]
name = "d1"
path = "src/d1.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"

[[bin]]
name = "e1"
path = "src/e1.rs"

[[bin]]
name = "e2"
path = "src/e2.rs"

[[bin]]
name = "f1"
path = "src/f1.rs"

[[bin]]
name = "f2"
path = "src/f2.rs"

[[bin]]
name = "g1"
path = "src/g1.rs"

[[bin]]
name = "g2"
path = "src/g2.rs"

[[bin]]
name = "h1"
path = "src/h1.rs"

[[bin]]
name = "h2"
path = "src/h2.rs"

[[bin]]
name = "z1"
path = "src/z1.rs"

[[bin]]
name = "z2"
path = "src/z2.rs"

[features]
interactive = []
libtests = []

[dev-dependencies]
rand = "0.8.3"
rand_chacha = "0.3.1"

[profile.test]
opt-level = 2 # https://codeforces.com/blog/entry/121114
overflow-checks = true

[profile.release]
overflow-checks = true
