[package]
name = "template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "template"
path = "src/template.rs"

[[bin]]
name = "a1"
path = "src/a1.rs"

[[bin]]
name = "a2"
path = "src/a2.rs"

[[bin]]
name = "b1"
path = "src/b1.rs"

[[bin]]
name = "b2"
path = "src/b2.rs"

[[bin]]
name = "c1"
path = "src/c1.rs"

[[bin]]
name = "c2"
path = "src/c2.rs"

[[bin]]
name = "d1"
path = "src/d1.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"

[[bin]]
name = "e1"
path = "src/e1.rs"

[[bin]]
name = "e2"
path = "src/e2.rs"

[[bin]]
name = "f1"
path = "src/f1.rs"

[[bin]]
name = "f2"
path = "src/f2.rs"

[[bin]]
name = "g1"
path = "src/g1.rs"

[[bin]]
name = "g2"
path = "src/g2.rs"

[[bin]]
name = "h1"
path = "src/h1.rs"

[[bin]]
name = "h2"
path = "src/h2.rs"

[[bin]]
name = "z1"
path = "src/z1.rs"

[[bin]]
name = "z2"
path = "src/z2.rs"

[features]
interactive = []
libtests = []

[dev-dependencies]
rand = "0.8.3"
rand_chacha = "0.3.1"

[profile.test]
opt-level = 2 # https://codeforces.com/blog/entry/121114
overflow-checks = true

[profile.release]
overflow-checks = true


[lints.rust]
rust_2018_idioms.level = "warn"
rust_2018_idioms.priority = -1
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
refining_impl_trait = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

dead_code = "allow"
missing_docs = "allow"
non_snake_case = "allow"
unused_imports = "allow"
unused_macros = "allow"


[lints.clippy]
all.level = "warn"
all.priority = -1
pedantic.level = "warn"
pedantic.priority = -1
branches_sharing_code = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
decimal_literal_representation = "warn"
default_trait_access = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
future_not_send = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
missing_const_for_fn = "warn"
missing_inline_in_public_items = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
option_if_let_else = "warn"
print_stderr = "warn"
rc_buffer = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
std_instead_of_core = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
todo = "warn"
trivial_regex = "warn"
try_err = "warn"
unimplemented = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"

alloc_instead_of_core = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_raw_string_hashes = "allow"
panic = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "allow"
unwrap_used = "allow"
wildcard_imports = "allow"
